# dark-sorter

./: .nixos-test-history  Cargo.toml  README.md  codebook.toml  devshell.nix  flake.nix  nix_module.nix  package.nix  result  test.py  tests.nix
src/: background_scanner.rs  darktable_cli.rs  database.rs  fs.rs  immich.rs  lib.rs  main.rs  scan.rs  test_support.rs  thread_pool.rs  watcher.rs  xmp.rs
src/background_scanner/: stats.rs
src/immich/: client.rs
src/scan/: link.rs  preview.rs
src/test_support/: rated_picture.xmp  unrated_picture.xmp
src/xmp/: edits.rs
src/xmp/edits/: helpers.rs
test-assets/: RAW_NIKON_D1.NEF.xmp
tests/: add_hardcoded_admin_and_api_key.patch  codebook.toml  helpers.nix  immich.nix  immich_integration.nix  module.nix  scan.nix  scan.rs  scan_symlinks_rated.rs  watch.rs  watcher.nix  watching_symlinks_new_rated.rs
tests/assets/: README.MD  _DSC3794.NEF.xmp  rated.NEF.xmp  small_raw.NEF.xmp  unrated.NEF.xmp
