[package]
name = "dark-sorter"
description = "link jpg's of rated photos to a sibling folder structure"
authors = [ "yara-blue" ]
version = "0.1.0"
edition = "2024"

# [features]
# test_support = ["tempfile"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
futures = "0.3.32"
itertools = "0.15.0"
postcard = { version = "1.1.3", features = ["use-std"] }
rlimit = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
spin = "0.12.0"
sysctl = "0.7.1"
systemstat = "0.2.7"
parking_lot = "0.12.5"
tempfile = { version = "3" } # , optional =true }
thiserror = "2.0.18"
thread-priority = "3.0.0"
tokio = { version = "1.52.3", features = ["fs", "process", "rt", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.18", features = ["fs"] }
tracing = "0.1.44"
yoke = "0.8.3"
fanotify-fid = { git = "https://github.com/yara-blue/fanotify-fid", rev = "8a75238" }
caps = "0.5.6"
libc = "0.2.186"
uzers = "0.12.2"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-error = "0.2.1"
reqwest = { version = "0.13.4", features = ["json"] }
futures-concurrency = "7.7.1"
tokio-retry = "0.3.2"

[[test]]
name = "watching_symlinks_new_rated"
# required-features = ["test_support"]

[[test]]
name = "scan_symlinks_rated"
# required-features = ["test_support"]
